fix: missing background color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	@apply bg-primary;
+}
+
 html, body, #__next {
 	height: 100%;
 }
